--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,30 +1,26 @@
+@import "normalize.less";
+
+@import "variables.less";
+
+@import "fonts.less";
+
+@import "global.less";
+
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/page-main.less";
+@import "blocks/page-footer.less";
+
 @import "blocks/intro.less";
 @import "blocks/download.less";
 @import "blocks/advantages.less";
 @import "blocks/reviews.less";
 @import "blocks/rate.less";
 @import "blocks/communication.less";
-@import "blocks/page-footer.less";
+
 @import "blocks/contest.less";
 @import "blocks/contest-list.less";
+
 @import "blocks/gallery.less";
 @import "blocks/gallery-post.less";
 @import "blocks/send.less";
-@import "blocks/send-list.less";
-@import "variables.less";
-
-body {
-  width: 320px;
-  margin: 0;
-  padding: 0;
-  font-family: "Open Sans", "Arial", sans-serif;
-  font-weight: normal;
-}
-
-a {
-  color: #FFFFFF;
-  text-decoration: none;
-}
