--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,8 +1,11 @@
 .intro {
   background-color: @basic-darkgrey;
+  padding-top: 28px;
+  padding-bottom: 38px;
 }
 
 .intro__text-style {
+  margin: 0;
   font-weight: 300;
   font-size: 14px;
   line-height: 24px;
