--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,17 +1,48 @@
 .main-nav__list {
+  display: none;
   list-style: none;
   padding: 0;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+  }
 }
 
 .main-nav__link {
   display: block;
   background-color: @basic-grey;
-  box-shadow: 0px 1px 0px #000000, inset 0px 1px 0px rgba(255, 255, 255, 0.15);
+  box-shadow: 0 1px 0 #000000, inset 0 1px 0 rgba(255, 255, 255, 0.15);
   font-weight: bold;
   font-size: 18px;
   line-height: 32px;
   align-items: center;
   text-transform: uppercase;
   color: @white;
+
+  @media (min-width: @desktop-width) {
+    background-color: transparent;
+    box-shadow: 0 0 0, inset 0 0 0;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 18px;
+    text-transform: none;
+    margin-left: 79px;
+  }
+}
+
+.main-nav__toggle {
+  display: block;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
 }
