--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,22 +1,57 @@
 .advantages__text {
+  margin: 0 auto;
+  margin-top: 46px;
   font-weight: 300;
   font-size: 24px;
   line-height: 29px;
   text-align: center;
   color: @basic-grey;
+
+  @media (min-width: @tablet-width) {
+    width: 588px;
+    margin-top: 0;
+    font-size: 40px;
+    line-height: 54px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 780px;
+    margin-top: 0;
+    font-size: 50px;
+    line-height: 68px;
+  }
+
   &--information {
+    margin: 0;
     font-weight: normal;
     font-size: 14px;
     line-height: 24px;
     text-align: center;
     color: @basic-grey;
+
+    @media (min-width: @tablet-width) {
+      width: auto;
+    }
+
+    @media (min-width: @desktop-width) {
+      width: auto;
+    }
   }
 }
 
 .advantages__list {
   list-style: none;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+
+  @media (min-width: @tablet-width) {
+    width: 310px;
+    margin: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 780px;
+  }
 }
 
 .advantages__title {
@@ -30,4 +65,26 @@
 
 .advantages__container {
   background-color: @basic-lightgrey;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+}
+
+.advantages__image {
+  display: block;
+  background-image: url("../img/iphone-screen-mobile@1x.png");
+  background-repeat: no-repeat;
+  width: 157px;
+  height: 320px;
+  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    background-image: url("../img/iphone-screen-3-tablet@1x.png");
+    width: 268px;
+    height: 471px;
+    margin: 0;
+  }
 }
