--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -3,8 +3,45 @@
   font-weight: bold;
   font-size: 18px;
   line-height: 18px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   text-align: center;
-  border: 3px solid #FFFFFF;
+  border: 3px solid #ffffff;
   box-sizing: border-box;
   border-radius: 29px;
+}
+
+.download__list {
+  width: 203px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  margin: 0 auto;
+  margin-top: 38px;
+  margin-bottom: 31px;
+  padding: 0;
+}
+
+.download__link {
+  display: block;
+  background-repeat: no-repeat;
+
+  &--apple {
+    background-image: url("../img/logo-apple.svg");
+    width: 47px;
+    height: 56px;
+  }
+
+  &--android {
+    background-image: url("../img/logo-android.svg");
+    width: 43px;
+    height: 47px;
+  }
+
+  &--microsoft {
+    background-image: url("../img/logo-microsoft.svg");
+    width: 44px;
+    height: 41px;
+  }
 }
