--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,1 +1,29 @@
+.page-header {
+  display: flex;
+  align-items: center;
+  height: 66px;
+  background-color: @black;
+  opacity: 0.3;
+  margin-bottom: -66px;
 
+  @media (min-width: @desktop-width) {
+    justify-content: flex-start;
+  }
+}
+
+.page-header__link {
+  display: block;
+}
+
+.page-header__logo {
+  display: block;
+  height: 23px;
+
+  @media (min-width: @tablet-width) {
+    height: 40px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 40px;
+  }
+}
