--- a/source/less/global.less
+++ b/source/less/global.less
@@ -1,5 +1,9 @@
 body {
-  width: 320px;
+  min-width: 320px;
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
   margin: 0;
   padding: 0;
   font-family: @basic-font;
@@ -7,6 +11,51 @@ body {
 }
 
 a {
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.container {
+  width: 280px;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @media (min-width: @tablet-width) {
+    width: 620px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1200px;
+    padding-left: 130px;
+    padding-right: 130px;
+  }
+}
+
+.flex-container {
+  display: flex;
+
+  &--space-between {
+    justify-content: space-between;
+    align-items: center;
+  }
 }
