--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,26 +1,27 @@
+/*! Подключает normalize */
 @import "normalize.less";
-
+/*! Подключает переменные */
 @import "variables.less";
-
+/*! Подключает шрифты */
 @import "fonts.less";
-
+/*! Подключает глобальные стили */
 @import "global.less";
-
+/*! Подключает стили общих блоков */
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/page-main.less";
 @import "blocks/page-footer.less";
-
+/*! Подключает стили главной страницы */
 @import "blocks/intro.less";
 @import "blocks/download.less";
 @import "blocks/advantages.less";
 @import "blocks/reviews.less";
 @import "blocks/rate.less";
 @import "blocks/communication.less";
-
+/*! Подключает стили страницы формы */
 @import "blocks/contest.less";
 @import "blocks/contest-list.less";
-
+/*! Подключает стили страницы галереи */
 @import "blocks/gallery.less";
 @import "blocks/gallery-post.less";
 @import "blocks/send.less";
