--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,4 +1,5 @@
 @white: #FFFFFF;
+@black: #000000;
 @basic-grey: #283645;
 @basic-darkgrey: #1D2631;
 @basic-lightgrey: #F2F2F2;
@@ -6,3 +7,7 @@
 @basic-green: #2AAB6D;
 
 @basic-font: "Open Sans", "Arial", sans-serif;
+
+@mobile-width-only: 320px;
+@tablet-width: 660px;
+@desktop-width: 1200px;
