--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -1,4 +1,4 @@
-.main-nav__list {
+.nav__list {
   display: none;
   list-style: none;
   padding: 0;
@@ -13,7 +13,7 @@
   }
 }
 
-.main-nav__link {
+.nav__link {
   display: block;
   background-color: @basic-grey;
   box-shadow: 0 1px 0 #000000, inset 0 1px 0 rgba(255, 255, 255, 0.15);
@@ -35,7 +35,7 @@
   }
 }
 
-.main-nav__toggle {
+.nav__toggle {
   display: block;
   border: none;
   background-color: transparent;
