--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,7 +1,26 @@
 .intro {
   background-color: @basic-darkgrey;
-  padding-top: 28px;
+  background: url("../img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  padding-top: 95px;
   padding-bottom: 38px;
+
+  @media (min-width: @tablet-width) {
+    background-color: @basic-darkgrey;
+    background-image: url("../img/iphone-hand-tablet@1x.png"),
+      url("../img/bg-back-tablet@1x.jpg");
+    background-position: left bottom, center 0;
+    background-repeat: no-repeat, no-repeat;
+    padding-bottom: 119px;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-color: @basic-darkgrey;
+    background-image: url("../img/iphone-hand-desktop@1x.png"),
+      url("../img/bg-back-desktop@1x.jpg");
+    background-position: right bottom, center 0;
+    background-repeat: no-repeat, no-repeat;
+  }
 }
 
 .intro__text-style {
@@ -11,4 +30,69 @@
   line-height: 24px;
   text-align: center;
   color: @white;
+
+  @media (min-width: @tablet-width) {
+    width: 250px;
+    font-size: 14px;
+    line-height: 24px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 250px;
+    font-size: 14px;
+    line-height: 24px;
+    margin: 0 auto;
+  }
+}
+
+.intro__title {
+  width: 280px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  padding: 0;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 29px;
+  text-align: center;
+  color: @white;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    margin-top: 102px;
+    margin-bottom: 29px;
+    margin-left: 50px;
+    width: 230px;
+    font-size: 40px;
+    line-height: 48px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+    margin-top: 102px;
+    margin-bottom: 29px;
+    margin-left: 130px;
+    width: 300px;
+    font-size: 50px;
+    line-height: 68px;
+  }
+
+  &--height {
+    line-height: 33px;
+  }
+}
+
+.intro__image {
+  display: block;
+  background-image: url("../img/iphone-hand-mobile@1x.png");
+  width: 258px;
+  height: 286px;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
 }
