--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -6,9 +6,22 @@
   opacity: 0.3;
   margin-bottom: -66px;
 
+  @media (min-width: @tablet-width) {
+    height: 110px;
+    margin-bottom: -110px;
+  }
+
   @media (min-width: @desktop-width) {
     justify-content: flex-start;
+    height: 110px;
+    margin-bottom: -110px;
   }
+}
+
+.page-header__block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .page-header__link {
