--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,7 +8,7 @@
 @import "global.less";
 /*! Подключает стили общих блоков */
 @import "blocks/page-header.less";
-@import "blocks/main-nav.less";
+@import "blocks/nav.less";
 @import "blocks/page-main.less";
 @import "blocks/page-footer.less";
 /*! Подключает стили главной страницы */
