--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,6 +1,6 @@
 .intro {
   background-color: @basic-darkgrey;
-  background: url("../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   padding-top: 95px;
   padding-bottom: 38px;
