--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,13 +9,13 @@
 /*! Подключает стили общих блоков */
 @import "blocks/page-header.less";
 @import "blocks/nav.less";
-@import "blocks/page-main.less";
 @import "blocks/page-footer.less";
 /*! Подключает стили главной страницы */
 @import "blocks/intro.less";
 @import "blocks/download.less";
 @import "blocks/advantages.less";
 @import "blocks/reviews.less";
+@import "blocks/slider.less";
 @import "blocks/rate.less";
 @import "blocks/communication.less";
 /*! Подключает стили страницы формы */
