--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -4,6 +4,19 @@
   padding: 0;
 }
 
+.reviews__item {
+  width: 275px;
+  display: block;
+
+  @media (min-width: @tablet-width) {
+    width: auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: auto;
+  }
+}
+
 .reviews__author-name {
   display: block;
   font-weight: bold;
@@ -12,6 +25,28 @@
   text-align: center;
   margin: 0;
   padding: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 24px;
+    line-height: 30px;
+  }
+}
+
+.reviews__author-info {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 24px;
+    line-height: 30px;
+  }
 }
 
 .reviews__text {
@@ -19,12 +54,33 @@
   line-height: 30px;
   text-align: center;
   color: @basic-grey;
+
+  @media (min-width: @tablet-width) {
+    font-size: 18px;
+    line-height: 30px;
+    order: -1;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 18px;
+    line-height: 30px;
+  }
 }
 
 .reviews__info {
-  display: block;
+  display: none;
   font-size: 14px;
   line-height: 30px;
   text-align: center;
   color: @basic-grey;
+
+  @media (min-width: @tablet-width) {
+    display: block;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: block;
+    font-size: 18px;
+    line-height: 30px;
+  }
 }
