Закончил задание 4 по главной

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,6 +18,7 @@
 @import "blocks/slider.less";
 @import "blocks/rate.less";
 @import "blocks/communication.less";
+@import "blocks/map.less";
 /*! Подключает стили страницы формы */
 @import "blocks/contest.less";
 @import "blocks/contest-list.less";
