--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,5 +1,134 @@
+.page-footer {
+  padding-top: 40px;
+  padding-bottom: 40px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 36px;
+    padding-bottom: 40px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 75px;
+    padding-bottom: 70px;
+  }
+}
+
+.page-footer__wrapper {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 204px;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+    min-height: 51px;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-height: 52px;
+  }
+}
+
 .page-footer__text {
+  margin: 0;
   font-size: 14px;
   line-height: 18px;
   color: @basic-grey;
+
+  @media (min-width: @desktop-width) {
+    font-size: 18px;
+    line-height: 18px;
+  }
+}
+
+.page-footer__communication {
+  display: flex;
+  align-items: center;
+}
+
+.page-footer__logo {
+  display: block;
+}
+
+.page-footer__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 178px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.page-footer__link {
+  display: block;
+  border: 3px solid rgba(40, 54, 69, 0.1);
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+
+  &--twitter {
+    position: relative;
+  }
+
+  &--facebook {
+    position: relative;
+  }
+
+  &--youtube {
+    position: relative;
+  }
+}
+
+.page-footer__link--twitter::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 18px;
+  height: 14px;
+  margin-top: -7px;
+  margin-left: -9px;
+  background-image: url("../img/icon-twitter.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.page-footer__link--facebook::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 9px;
+  height: 18px;
+  margin-top: -9px;
+  margin-left: -4px;
+  background-image: url("../img/icon-facebook.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.page-footer__link--youtube::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 15px;
+  height: 13px;
+  margin-top: -6px;
+  margin-left: -7px;
+  background-image: url("../img/icon-youtube.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.page-footer__icon {
+  display: block;
+  background-image: url("../img/htmlacademy.svg");
+  background-repeat: no-repeat;
+  width: 27px;
+  height: 34px;
+  margin-left: 15px;
 }
