Сверстал форму в мобильном и планшетном

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,6 +8,7 @@
 @import "global.less";
 /*! Подключает стили общих блоков */
 @import "blocks/page-header.less";
+@import "blocks/page-main.less";
 @import "blocks/nav.less";
 @import "blocks/page-footer.less";
 /*! Подключает стили главной страницы */
@@ -21,7 +22,6 @@
 @import "blocks/map.less";
 /*! Подключает стили страницы формы */
 @import "blocks/contest.less";
-@import "blocks/contest-list.less";
 /*! Подключает стили страницы галереи */
 @import "blocks/gallery.less";
 @import "blocks/gallery-post.less";
