--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -3,6 +3,7 @@
 @basic-grey: #283645;
 @basic-darkgrey: #1D2631;
 @basic-lightgrey: #F2F2F2;
+@extra-lightgrey: #E5E5E5;
 @basic-red: #D22856;
 @basic-green: #2AAB6D;
 
