--- a/source/less/blocks/communication.less
+++ b/source/less/blocks/communication.less
@@ -25,13 +25,13 @@
   color: @basic-grey;
 
   @media (min-width: @tablet-width) {
-    width: auto;
+    width: 370px;
     font-size: 40px;
     line-height: 54px;
   }
 
   @media (min-width: @desktop-width) {
-    width: auto;
+    width: 462px;
     font-size: 50px;
     line-height: 68px;
   }
