--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -1,17 +1,153 @@
 .contest__text {
   margin: 0;
   padding: 0;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 30px;
   text-align: center;
   color: @basic-grey;
 }
 
+.contest__lead {
+  font-size: 14px;
+  line-height: 30px;
+  color: @basic-grey;
+  text-align: center;
+  margin: 0 auto;
+
+  &--form {
+    display: none;
+
+    @media (min-width: @tablet-width) {
+      display: inline;
+    }
+
+    @media (min-width: @desktop-width) {
+      display: inline;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 490px;
+    font-size: 18px;
+    line-height: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 756px;
+    font-size: 18px;
+    line-height: 30px;
+  }
+}
+
+.contest__caption {
+  display: block;
+
+  @media (min-width: @tablet-width) {
+    display: inline;
+    margin-right: 20px;
+  }
+
+  &--order {
+    @media (min-width: @tablet-width) {
+      order: 1;
+    }
+  }
+}
+
+.contest__form {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.contest__element {
+  @media (min-width: @tablet-width) {
+    width: 100%;
+  }
+
+  &--first {
+    @media (min-width: @tablet-width) {
+      order: 1;
+    }
+  }
+
+  &--second {
+    @media (min-width: @tablet-width) {
+      order: 4;
+    }
+  }
+
+  &--third {
+    @media (min-width: @tablet-width) {
+      order: 3;
+    }
+  }
+
+  &--fourth {
+    @media (min-width: @tablet-width) {
+      order: 2;
+    }
+  }
+
+  &--fifth {
+    @media (min-width: @tablet-width) {
+      order: 5;
+    }
+  }
+
+  &--sixth {
+    @media (min-width: @tablet-width) {
+      order: 6;
+    }
+  }
+}
+
 .contest__label {
+  display: flex;
+  flex-direction: column;
   font-size: 14px;
   line-height: 30px;
   color: @basic-red;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    align-items: center;
+    flex-direction: row;
+    margin-top: 56px;
+  }
+
+  &--column {
+    @media (min-width: @tablet-width) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+}
+
+.contest__input {
+  padding-top: 23px;
+  padding-bottom: 23px;
+  padding-left: 20px;
+  border: 2px solid @extra-lightgrey;
+  border-radius: 1px;
+  width: 100%;
+  box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    width: 100%;
+  }
+
+  &--width {
+    @media (min-width: @tablet-width) {
+      display: block;
+      width: 496px;
+      height: 189px;
+      margin: 0 auto;
+      margin-top: 42px;
+      margin-bottom: 53px;
+    }
+  }
 }
 
 .contest__input::placeholder {
@@ -26,25 +162,77 @@
   text-align: center;
   text-transform: uppercase;
   color: @basic-red;
+  width: 218px;
+  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    width: auto;
+    padding-left: 31px;
+    padding-right: 31px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: auto;
+  }
+
+  &--none {
+    display: none;
+
+    @media (min-width: @tablet-width) {
+      display: block;
+    }
+  }
+}
+
+.contest__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.contest__item {
+  margin-top: 60px;
 }
 
 .contest__name-list {
   list-style: none;
   margin: 0;
   padding: 0;
+
+  &--padding {
+    @media (min-width: @tablet-width) {
+      padding-right: 60px;
+      padding-left: 60px;
+    }
+  }
 }
 
 .contest__fieldset {
   border: none;
   margin: 0;
   padding: 0;
+
+  @media (min-width: @tablet-width) {
+    border: 2px solid @extra-lightgrey;
+    border-radius: 2px;
+  }
 }
 
 .contest__container {
   background-color: @basic-lightgrey;
+
+  @media (min-width: @tablet-width) {
+    background-color: inherit;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-color: inherit;
+  }
 }
 
 .contest__button {
+  display: inline-block;
+  width: auto;
   font-weight: bold;
   font-size: 18px;
   line-height: 30px;
@@ -53,10 +241,15 @@
   background: @basic-green;
   border: 2px solid @basic-green;
   border-radius: 1px;
+
+  @media (min-width: @tablet-width) {
+    display: inline-block;
+    width: 296px;
+  }
 }
 
 .contest__small {
-  display: block;
+  display: inline-block;
   font-size: 14px;
   line-height: 30px;
   text-transform: uppercase;
