--- a/source/less/global.less
+++ b/source/less/global.less
@@ -1,3 +1,7 @@
+html {
+  box-sizing: border-box;
+}
+
 body {
   min-width: 320px;
   min-height: 100%;
@@ -8,7 +12,6 @@ body {
   padding: 0;
   font-family: @basic-font;
   font-weight: normal;
-  box-sizing: border-box;
 }
 
 a {
@@ -38,16 +41,19 @@ img {
   max-width: 320px;
   padding-left: 20px;
   padding-right: 20px;
+  margin: 0 auto;
 
   @media (min-width: @tablet-width) {
     max-width: 620px;
     padding-left: 20px;
     padding-right: 20px;
+    margin: 0 auto;
   }
 
   @media (min-width: @desktop-width) {
     max-width: 1200px;
     padding-left: 130px;
     padding-right: 130px;
+    margin: 0 auto;
   }
 }
