Сверстал форму десктоп

--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -1,11 +1,26 @@
 .gallery__text {
   font-size: 14px;
-  line-height: 30px;
-  text-align: center;
+  line-height: 24px;
+  text-align: left;
   color: @basic-grey;
+}
 
-  &--height {
-    line-height: 24px;
-    text-align: left;
+.gallery__lead {
+  font-size: 14px;
+  line-height: 30px;
+  color: @basic-grey;
+  text-align: center;
+  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    width: 500px;
+    font-size: 18px;
+    line-height: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 600px;
+    font-size: 18px;
+    line-height: 30px;
   }
 }
