--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -1,11 +1,22 @@
 .download {
   background-color: @basic-darkgrey;
   padding-top: 28px;
+  padding-right: 20px;
+  padding-left: 20px;
   padding-bottom: 38px;
 
   @media (min-width: @tablet-width) {
     background-color: transparent;
     padding-top: 0;
+    padding-left: 20px;
+    padding-bottom: 0;
+    width: 300px;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-color: transparent;
+    padding-top: 0;
+    padding-left: 120px;
     padding-bottom: 0;
     width: 300px;
   }
@@ -26,6 +37,7 @@
   @media (min-width: @desktop-width) {
     font-size: 21px;
     line-height: 18px;
+    width: 100%;
   }
 }
 
