--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -41,4 +41,10 @@
     font-size: 50px;
     line-height: 68px;
   }
+
+  &--width {
+    @media (min-width: @desktop-width) {
+      width: 360px;
+    }
+  }
 }
