--- a/source/less/blocks/communication.less
+++ b/source/less/blocks/communication.less
@@ -84,19 +84,9 @@
     width: 241px;
   }
 
-  @media (min-width: @desktop-width) {
-    width: 241px;
-  }
-
-  &--right {
+  &--order {
     @media (min-width: @desktop-width) {
-      order: 3;
-    }
-  }
-
-  &--left {
-    @media (min-width: @desktop-width) {
-      order: 1;
+      order: 2;
     }
   }
 
@@ -106,7 +96,6 @@
     }
 
     @media (min-width: @desktop-width) {
-      order: 2;
       margin: 0;
     }
   }
