--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,8 +13,9 @@
 @import "blocks/page-footer.less";
 /*! Подключает стили главной страницы */
 @import "blocks/intro.less";
-@import "blocks/download.less";
+@import "blocks/icons-list.less";
 @import "blocks/advantages.less";
+@import "blocks/effect.less";
 @import "blocks/reviews.less";
 @import "blocks/slider.less";
 @import "blocks/rate.less";
@@ -22,6 +23,12 @@
 @import "blocks/map.less";
 /*! Подключает стили страницы формы */
 @import "blocks/contest.less";
+@import "blocks/form.less";
+@import "blocks/form-mainInfo.less";
+@import "blocks/form-achievements.less";
+@import "blocks/form-contactInfo.less";
+@import "blocks/form-application.less";
+@import "blocks/form-comment.less";
 /*! Подключает стили страницы галереи */
 @import "blocks/gallery.less";
 @import "blocks/send.less";
