--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -21,23 +21,6 @@
     line-height: 68px;
   }
 
-  &--left {
-    @media (min-width: @tablet-width) {
-      width: auto;
-      font-weight: normal;
-      text-align: left;
-      font-size: 14px;
-      line-height: 24px;
-    }
-
-    @media (min-width: @desktop-width) {
-      width: auto;
-      text-align: left;
-      font-size: 18px;
-      line-height: 30px;
-    }
-  }
-
   &--information {
     margin: 0;
     margin-bottom: 43px;
@@ -82,6 +65,20 @@
   @media (min-width: @desktop-width) {
     width: 252px;
   }
+
+  & img {
+    display: none;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
+
+    @media (min-width: @desktop-width) {
+      display: block;
+      margin: 0 auto;
+      margin-bottom: 50px;
+    }
+  }
 }
 
 .advantages__title {
@@ -102,31 +99,9 @@
     font-size: 30px;
     line-height: 30px;
   }
-
-  &--bold {
-    @media (min-width: @tablet-width) {
-      margin: 0;
-      padding: 0;
-      width: 168px;
-      font-size: 30px;
-      line-height: 36px;
-    }
-
-    @media (min-width: @desktop-width) {
-      margin: 0;
-      padding: 0;
-      width: auto;
-      font-size: 30px;
-      line-height: 30px;
-      text-align: left;
-    }
-  }
 }
 
 .advantages__container {
-  background-color: @basic-lightgrey;
-  padding-top: 103px;
-
   @media (min-width: @tablet-width) {
     display: flex;
     justify-content: space-between;
@@ -135,6 +110,11 @@
   @media (min-width: @desktop-width) {
     display: block;
   }
+}
+
+.advantages__wrapper {
+  background-color: @basic-lightgrey;
+  padding-top: 103px;
 }
 
 .advantages__image {
@@ -168,80 +148,5 @@
 
   @media (min-width: @desktop-width) {
     padding-top: 77px;
-  }
-}
-
-.advantages__additionally {
-  display: none;
-
-  @media (min-width: @tablet-width) {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 58px;
-  }
-
-  @media (min-width: @desktop-width) {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 58px;
-    background-color: @basic-lightgrey;
-  }
-}
-
-.advantages__chunk {
-  @media (min-width: @tablet-width) {
-    width: 300px;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 523px;
-  }
-}
-
-.advantages__svg {
-  @media (min-width: @tablet-width) {
-    display: block;
-    background-image: url("../img/icon-timer.svg");
-    background-repeat: no-repeat;
-    width: 238px;
-    height: 276px;
-  }
-
-  @media (min-width: @desktop-width) {
-    display: block;
-    background-image: url("../img/icon-timer.svg");
-    background-repeat: no-repeat;
-    width: 298px;
-    height: 345px;
-  }
-}
-
-.advantages__link {
-  @media (min-width: @tablet-width) {
-    color: @basic-red;
-    text-decoration: underline;
-    font-size: 14px;
-    line-height: 24px;
-  }
-
-  @media (min-width: @desktop-width) {
-    color: @basic-red;
-    text-decoration: underline;
-    font-size: 18px;
-    line-height: 30px;
-  }
-}
-
-.advantages__screen {
-  display: none;
-
-  @media (min-width: @tablet-width) {
-    display: none;
-  }
-
-  @media (min-width: @desktop-width) {
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 50px;
   }
 }
