--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,9 +1,10 @@
-.intro {
+.intro__picture {
   background-color: @basic-darkgrey;
-  background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-repeat: no-repeat;
-  padding-top: 95px;
-  padding-bottom: 38px;
+  background-image: url("../img/iphone-hand-mobile@1x.png"),
+    url("../img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat no-repeat;
+  background-position: left bottom, center 0;
+  min-height: 462px;
 
   @media (min-width: @tablet-width) {
     background-color: @basic-darkgrey;
@@ -11,7 +12,7 @@
       url("../img/bg-back-tablet@1x.jpg");
     background-position: left bottom, center 0;
     background-repeat: no-repeat, no-repeat;
-    padding-bottom: 119px;
+    min-height: 729px;
   }
 
   @media (min-width: @desktop-width) {
@@ -20,6 +21,7 @@
       url("../img/bg-back-desktop@1x.jpg");
     background-position: right bottom, center 0;
     background-repeat: no-repeat, no-repeat;
+    min-height: 853px;
   }
 }
 
@@ -32,24 +34,23 @@
   color: @white;
 
   @media (min-width: @tablet-width) {
-    width: 250px;
     font-size: 14px;
     line-height: 24px;
     margin: 0 auto;
   }
 
   @media (min-width: @tablet-width) {
-    width: 250px;
     font-size: 14px;
     line-height: 24px;
     margin: 0 auto;
   }
 }
 
-.intro__title {
-  width: 280px;
+.intro__slogan {
+  position: absolute;
+  top: 80px;
   margin: 0 auto;
-  margin-bottom: 20px;
+  margin-bottom: 39px;
   padding: 0;
   font-size: 24px;
   font-weight: 300;
@@ -58,41 +59,60 @@
   color: @white;
 
   @media (min-width: @tablet-width) {
-    margin: 0;
-    margin-top: 102px;
-    margin-bottom: 29px;
-    margin-left: 50px;
-    width: 230px;
+    position: static;
     font-size: 40px;
     line-height: 48px;
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0;
-    margin-top: 102px;
-    margin-bottom: 29px;
-    margin-left: 130px;
-    width: 300px;
+    position: static;
     font-size: 50px;
     line-height: 68px;
   }
+}
 
-  &--height {
-    line-height: 33px;
+.intro__break {
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: block;
   }
 }
 
-.intro__image {
-  display: block;
-  background-image: url("../img/iphone-hand-mobile@1x.png");
-  width: 258px;
-  height: 286px;
+.intro__downloads {
+  background-color: @basic-darkgrey;
+  padding-top: 28px;
+  padding-bottom: 38px;
 
   @media (min-width: @tablet-width) {
-    display: none;
+    position: absolute;
+    padding: 0;
+    top: 200px;
+    left: 20px;
+    background-color: transparent;
+    min-width: 0;
+    width: 300px;
   }
 
   @media (min-width: @desktop-width) {
-    display: none;
+    left: 130px;
+  }
+}
+
+.intro__button {
+  display: block;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 18px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center;
+  border: 3px solid #ffffff;
+  box-sizing: border-box;
+  border-radius: 29px;
+
+  @media (min-width: @desktop-width) {
+    font-size: 21px;
+    line-height: 18px;
   }
 }
