--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -13,6 +13,14 @@
   }
 }
 
+.nav--closed .nav__list {
+  display: none;
+}
+
+.nav--opened .nav__list {
+  display: block;
+}
+
 .nav__link {
   display: block;
   background-color: @basic-grey;
@@ -41,6 +49,9 @@
   background-color: transparent;
   padding: 0;
   margin: 0;
+  background-image: url("../img/icon-menu-burger.svg");
+  width: 50px;
+  height: 24px;
 
   @media (min-width: @desktop-width) {
     display: none;
