--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,3 +1,9 @@
+@basic-font: "Open Sans", "Arial", sans-serif;
+
+@mobile-width: 320px;
+@tablet-width: 660px;
+@desktop-width: 1200px;
+
 @white: #FFFFFF;
 @black: #000000;
 @basic-grey: #283645;
@@ -6,9 +12,3 @@
 @extra-lightgrey: #E5E5E5;
 @basic-red: #D22856;
 @basic-green: #2AAB6D;
-
-@basic-font: "Open Sans", "Arial", sans-serif;
-
-@mobile-width-only: 320px;
-@tablet-width: 660px;
-@desktop-width: 1200px;
