--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -1,34 +1,42 @@
-.nav__list {
+.nav {
   display: none;
+
+  @media (min-width: @desktop-width) {
+    display: block;
+    position: absolute;
+    top: 30px;
+    right: 130px;
+  }
+}
+
+.nav__list {
   list-style: none;
   padding: 0;
   margin: 0;
-
-  @media (min-width: @tablet-width) {
-    display: none;
-  }
 
   @media (min-width: @desktop-width) {
     display: flex;
   }
 }
 
-.nav--closed .nav__list {
-  display: none;
-}
+.nav__item {
+  text-align: center;
+  background-color: @basic-grey;
+  box-shadow: 0 1px 0 #000000, inset 0 1px 0 rgba(255, 255, 255, 0.15);
 
-.nav--opened .nav__list {
-  display: block;
+  @media (min-width: @desktop-width) {
+    text-align: start;
+    background-color: transparent;
+    box-shadow: none;
+  }
 }
 
 .nav__link {
+  padding: 15px 0;
   display: block;
-  background-color: @basic-grey;
-  box-shadow: 0 1px 0 #000000, inset 0 1px 0 rgba(255, 255, 255, 0.15);
   font-weight: bold;
   font-size: 18px;
   line-height: 32px;
-  align-items: center;
   text-transform: uppercase;
   color: @white;
 
@@ -40,20 +48,5 @@
     line-height: 18px;
     text-transform: none;
     margin-left: 79px;
-  }
-}
-
-.nav__toggle {
-  display: block;
-  border: none;
-  background-color: transparent;
-  padding: 0;
-  margin: 0;
-  background-image: url("../img/icon-menu-burger.svg");
-  width: 50px;
-  height: 24px;
-
-  @media (min-width: @desktop-width) {
-    display: none;
   }
 }
