--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,10 +1,8 @@
 .page-header {
-  display: flex;
-  align-items: center;
-  height: 66px;
-  background-color: @black;
-  opacity: 0.3;
+  min-height: 66px;
+  background-color: rgba(0, 0, 0, 0.3);
   margin-bottom: -66px;
+  z-index: 1;
 
   @media (min-width: @tablet-width) {
     height: 110px;
@@ -19,10 +17,18 @@
 }
 
 .page-header__block {
+  padding-top: 20px;
+  padding-bottom: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 43px;
+    padding-bottom: 43px;
+  }
 }
 
 .page-header__link {
@@ -40,4 +46,54 @@
   @media (min-width: @desktop-width) {
     height: 40px;
   }
+}
+
+.page-header__toggle {
+  display: block;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
+}
+
+.page-header--opened {
+  background-color: @basic-grey;
+  opacity: 1;
+  box-shadow: 0px 1px 0px #000000;
+}
+
+.page-header__svg {
+  display: none;
+}
+
+.page-header__svg--cross {
+  display: none;
+}
+
+.page-header__svg--burger {
+  display: block;
+}
+
+.page-header--opened .page-header__svg--burger{
+  display: none;
+}
+
+.page-header--opened .page-header__svg--cross{
+  display: block;
+}
+
+.page-header--opened .nav {
+  display: block;
+}
+
+.page-header--nojs {
+  background-color: @basic-grey;
+}
+
+.page-header--nojs .nav {
+  display: block;
 }
