--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,3 +1,7 @@
+.page-main {
+  position: relative;
+}
+
 .page-main__background {
   background-color: @basic-darkgrey;
   background-image: url("../img/bg-back-mobile@1x.jpg");
