--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -63,7 +63,7 @@
 .page-header--opened {
   background-color: @basic-grey;
   opacity: 1;
-  box-shadow: 0px 1px 0px #000000;
+  box-shadow: 0 1px 0 #000000;
 }
 
 .page-header__svg {
@@ -78,11 +78,11 @@
   display: block;
 }
 
-.page-header--opened .page-header__svg--burger{
+.page-header--opened .page-header__svg--burger {
   display: none;
 }
 
-.page-header--opened .page-header__svg--cross{
+.page-header--opened .page-header__svg--cross {
   display: block;
 }
 
