Прошелся немного по pixelperfect

--- a/source/less/blocks/communication.less
+++ b/source/less/blocks/communication.less
@@ -71,11 +71,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    padding: 0 25px;
   }
 
   @media (min-width: @desktop-width) {
     width: auto;
-    display: flex;
   }
 }
 
@@ -93,10 +93,6 @@
   &--center {
     @media (min-width: @tablet-width) {
       margin: 0 auto;
-    }
-
-    @media (min-width: @desktop-width) {
-      margin: 0;
     }
   }
 }
