--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,6 +1,6 @@
 .advantages__text {
   margin: 0 auto;
-  margin-top: 46px;
+  margin-bottom: 30px;
   font-weight: 300;
   font-size: 24px;
   line-height: 29px;
@@ -23,7 +23,7 @@
 
   &--information {
     margin: 0;
-    margin-bottom: 43px;
+    margin-bottom: 32px;
     font-weight: normal;
     font-size: 14px;
     line-height: 24px;
@@ -86,7 +86,7 @@
   font-size: 18px;
   line-height: 24px;
   margin: 0;
-  margin-bottom: 24px;
+  margin-bottom: 11px;
   padding: 0;
   text-align: center;
 
@@ -113,8 +113,9 @@
 }
 
 .advantages__wrapper {
+  background: linear-gradient(174deg, #ffffff 33px, transparent 0);
   background-color: @basic-lightgrey;
-  padding-top: 103px;
+  padding-top: 83px;
 }
 
 .advantages__image {
@@ -140,7 +141,8 @@
 }
 
 .advantages__block {
-  padding-bottom: 70px;
+  padding-top: 41px;
+
 
   @media (min-width: @tablet-width) {
     padding-top: 58px;
