--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -80,11 +80,11 @@
   border: 3px solid rgba(40, 54, 69, 0.1);
 }
 
-.page-footer__link:active .page-footer__svg {
+.page-footer__link:active svg {
   opacity: 0.3;
 }
 
-.page-footer__svg--twitter {
+.page-footer__link--twitter svg {
   content: "";
   position: absolute;
   top: 50%;
@@ -95,7 +95,7 @@
   margin-left: -9px;
 }
 
-.page-footer__svg--facebook {
+.page-footer__link--facebook svg {
   content: "";
   position: absolute;
   top: 50%;
@@ -106,7 +106,7 @@
   margin-left: -4px;
 }
 
-.page-footer__svg--youtube {
+.page-footer__link--youtube svg {
   content: "";
   position: absolute;
   top: 50%;
