--- a/source/less/blocks/communication.less
+++ b/source/less/blocks/communication.less
@@ -60,6 +60,29 @@
   color: @basic-red;
 }
 
+.communication__paragraph {
+  display: block;
+  margin: 0;
+  padding: 0;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 33px;
+  text-align: center;
+  color: @basic-red;
+}
+
+.communication__link:hover,
+.communication__link:focus {
+  color: @basic-grey;
+  text-decoration: underline;
+}
+
+.communication__link:active {
+  opacity: 0.3;
+  color: @basic-grey;
+  text-decoration: none;
+}
+
 .communication__list {
   width: 241px;
   list-style: none;
