--- a/source/less/blocks/form-achievements.less
+++ b/source/less/blocks/form-achievements.less
@@ -51,3 +51,40 @@
   text-align: center;
   color: @basic-grey;
 }
+
+.form-achievements__item input {
+  display: none;
+}
+
+.form-achievements__item label {
+  position: relative;
+  text-align: left;
+  margin-left: 59px;
+  display: block;
+  cursor: pointer;
+  user-select: none;
+}
+
+.form-achievements__checkbox-icon {
+  position: absolute;
+  top: -4px;
+  left: -59px;
+  display: block;
+  width: 35px;
+  height: 35px;
+  border: 2px solid @extra-lightgrey;
+  border-radius: 1px;
+}
+
+.form-achievements__input:checked + .form-achievements__checkbox-icon {
+  content: "";
+  position: absolute;
+  display: block;
+  top: -4px;
+  left: -59px;
+  width: 35px;
+  height: 35px;
+  background-image: url("../img/icon-tick.svg");
+  background-repeat: no-repeat;
+  background-position: 7px 9px;
+}
