--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -1,6 +1,4 @@
 .nav {
-  display: none;
-
   @media (min-width: @desktop-width) {
     display: block;
     position: absolute;
@@ -10,6 +8,7 @@
 }
 
 .nav__list {
+  display: none;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -49,4 +48,76 @@
     text-transform: none;
     margin-left: 79px;
   }
+}
+
+.nav__link[href]:hover,
+.nav__link[href]:focus {
+  color: @basic-red;
+}
+
+.nav__link[href]:active {
+  color: @white;
+  opacity: 0.3;
+}
+
+.nav__link:not([href]) {
+  border-bottom: 2px solid @white;
+}
+
+.nav--opened .nav__link:active {
+  color: @basic-red;
+  opacity: 0.3;
+}
+
+.nav--opened .nav__link:not([href]) {
+  border: none;
+}
+
+.nav__toggle {
+  position: absolute;
+  top: 21px;
+  right: 20px;
+  display: block;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    top: 43px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
+}
+
+.nav__toggle:hover path,
+.nav__toggle:focus path {
+  fill: @basic-red;
+}
+
+.nav__toggle:active path {
+  fill: @basic-red;
+  opacity: 0.3;
+}
+
+.nav__svg--cross {
+  display: none;
+}
+
+.nav--opened .nav__list {
+  display: block;
+}
+
+.nav--opened .nav__svg--cross {
+  display: block;
+}
+
+.nav--opened .nav__svg--burger {
+  display: none;
+}
+
+.nav--no-js .nav__list {
+  display: block;
 }
