--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,6 +8,7 @@
 @import "global.less";
 /*! Подключает стили общих блоков */
 @import "blocks/page-header.less";
+@import "blocks/logo.less";
 @import "blocks/page-main.less";
 @import "blocks/nav.less";
 @import "blocks/page-footer.less";
