Сверстал form для mobile

--- a/source/less/blocks/form-achievements.less
+++ b/source/less/blocks/form-achievements.less
@@ -1,5 +1,7 @@
 .form-achievements {
   background-color: @basic-lightgrey;
+  margin-top: 42px;
+  padding-top: 40px;
 
   @media (min-width: @tablet-width) {
     background-color: inherit;
@@ -36,7 +38,7 @@
 }
 
 .form-achievements__item {
-  margin-top: 40px;
+  margin-bottom: 52px;
 
   @media (min-width: @desktop-width) {
     width: auto;
