--- a/source/less/blocks/form-comment.less
+++ b/source/less/blocks/form-comment.less
@@ -1,13 +1,16 @@
 .form-comment {
+  padding-top: 38px;
+
   @media (min-width: @tablet-width) {
     order: 5;
   }
 }
 
 .form-comment__input {
-  padding-top: 23px;
-  padding-bottom: 23px;
+  padding-top: 14px;
+  padding-bottom: 0;
   padding-left: 20px;
+  margin-bottom: 45px;
   border: 2px solid @extra-lightgrey;
   border-radius: 1px;
   width: 100%;
@@ -26,4 +29,8 @@
     width: 816px;
     height: 124px;
   }
+}
+
+.form-comment__title {
+  margin-bottom: 16px;
 }
