--- a/source/less/blocks/form-mainInfo.less
+++ b/source/less/blocks/form-mainInfo.less
@@ -18,6 +18,8 @@
 
 .form-mainInfo__caption {
   display: block;
+  margin-left: 23px;
+  margin-bottom: 6px;
 
   @media (min-width: @tablet-width) {
     display: block;
