--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,3 +1,7 @@
+.form {
+  margin-top: 36px;
+}
+
 .form__block {
   @media (min-width: @tablet-width) {
     width: 100%;
@@ -20,6 +24,7 @@
   line-height: 30px;
   color: @basic-red;
   text-transform: uppercase;
+  margin-bottom: 17px;
 
   @media (min-width: @tablet-width) {
     align-items: center;
@@ -29,8 +34,8 @@
 }
 
 .form__input {
-  padding-top: 23px;
-  padding-bottom: 23px;
+  padding-top: 21px;
+  padding-bottom: 21px;
   padding-left: 20px;
   border: 2px solid @extra-lightgrey;
   border-radius: 1px;
@@ -78,6 +83,7 @@
   color: @basic-red;
   width: 218px;
   margin: 0 auto;
+  margin-bottom: 43px;
 
   @media (min-width: @tablet-width) {
     width: auto;
@@ -131,8 +137,9 @@
   background: @basic-green;
   border: 2px solid @basic-green;
   border-radius: 1px;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  margin-bottom: 35px;
 
   @media (min-width: @tablet-width) {
     display: block;
