--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,6 +12,7 @@
 @import "blocks/page-main.less";
 @import "blocks/nav.less";
 @import "blocks/page-footer.less";
+@import "blocks/logo-footer.less";
 /*! Подключает стили главной страницы */
 @import "blocks/intro.less";
 @import "blocks/icons-list.less";
