--- a/source/less/blocks/form-contactInfo.less
+++ b/source/less/blocks/form-contactInfo.less
@@ -1,4 +1,7 @@
 .form-contactInfo {
+  margin-bottom: 24px;
+  padding-top: 29px;
+
   @media (min-width: @tablet-width) {
     order: 3;
   }
@@ -29,6 +32,7 @@
   line-height: 30px;
   color: @basic-red;
   text-transform: uppercase;
+  margin-bottom: 18px;
 
   @media (min-width: @tablet-width) {
     flex-direction: column;
@@ -48,6 +52,8 @@
 
 .form-contactInfo__caption {
   display: block;
+  margin-left: 23px;
+  margin-bottom: 6px;
 
   @media (min-width: @tablet-width) {
     margin-right: 20px;
